<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.healthy.rvigor.view.CusToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_title="@string/ox_instructions" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/what_blood_oxygen"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="3dp"
        android:text="@string/what_blood_oxygen_tip"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/blood_oxygen_saturation"
        android:textColor="#ffffffff"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="3dp"
        android:text="@string/blood_oxygen_saturation_tip"
        android:textColor="#ffffffff"
        android:textSize="12sp" />

</LinearLayout>