<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.healthy.rvigor.view.CusToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:center_title="@string/ox_measure" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:src="@drawable/svg_measure_fail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/ox_measure_fail"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_fail_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/ox_measure_fail_tip"
        android:textColor="#ff555555"
        android:textSize="14sp" />

</LinearLayout>