<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.healthy.rvigor.view.CusToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_info"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/svg_man"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.healthy.rvigor.view.LabelView
                android:id="@+id/lb_nick"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_item_info"
                android:paddingStart="10dp"
                app:label_show_left_img="false"
                app:label_title="@string/nickname"
                app:label_hint="@string/please_select" />

            <com.healthy.rvigor.view.LabelView
                android:id="@+id/lb_sex"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_item_info"
                android:paddingStart="10dp"
                app:label_show_left_img="false"
                app:label_title="@string/sex"
                app:label_hint="@string/please_select" />

            <com.healthy.rvigor.view.LabelView
                android:id="@+id/lb_birthday"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_item_info"
                android:paddingStart="10dp"
                app:label_show_left_img="false"
                app:label_title="@string/birthday"
                app:label_hint="@string/please_select" />

            <com.healthy.rvigor.view.LabelView
                android:id="@+id/lb_height"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_item_info"
                android:paddingStart="10dp"
                app:label_show_left_img="false"
                app:label_title="@string/height"
                app:label_hint="@string/please_select" />

            <com.healthy.rvigor.view.LabelView
                android:id="@+id/lb_weight"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_item_info"
                android:paddingStart="10dp"
                app:label_show_left_img="false"
                app:label_title="@string/weight"
                app:label_hint="@string/please_select" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>