<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg_dialog_confirm"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:paddingStart="39dp"
        android:paddingTop="20dp"
        android:text="@string/sex"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <RadioButton
            android:id="@+id/rbt_male"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_1A192A"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/selector_check"
            android:drawablePadding="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/male"
            android:textColor="@drawable/selector_check" />

        <RadioButton
            android:id="@+id/rbt_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_1A192A"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_check"
            android:drawablePadding="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="32dp"
            android:text="@string/female"
            android:textColor="@drawable/selector_check" />

        <RadioButton
            android:id="@+id/rbt_secrecy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/color_1A192A"
            android:button="@null"
            android:checked="false"
            android:drawableLeft="@drawable/selector_check"
            android:drawablePadding="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="32dp"
            android:text="@string/secrecy"
            android:textColor="@drawable/selector_check" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_sex" />

    <View
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:background="#3E3E58"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_sure" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="#6DFFE9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/rg_sex" />

</androidx.constraintlayout.widget.ConstraintLayout>