<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/bg_dialog_confirm"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:paddingStart="39dp"
        android:paddingTop="20dp"
        android:text="@string/birthday"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <View
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/bg_3e3e58_4"
            app:layout_constraintBottom_toBottomOf="@+id/wheelview"
            app:layout_constraintTop_toTopOf="@+id/wheelview" />

        <com.zyyoona7.picker.DatePickerView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingEnd="16dp"
            android:paddingBottom="20dp"
            app:dpv_dayRightText="@string/spe_day"
            app:dpv_lineSpacing="10dp"
            app:dpv_monthRightText="@string/spe_month"
            app:dpv_normalTextColor="#7C7D8C"
            app:dpv_rightTextColor="#7C7D8C"
            app:dpv_selectedTextColor="#6DFFE9"
            app:dpv_textPadding="10dp"
            app:dpv_textSize="24sp"
            app:dpv_yearRightText="@string/spe_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cancel" />

        <!-- <com.zyyoona7.picker.DatePickerView
             android:id="@+id/date_picker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:paddingTop="20dp"
             android:paddingEnd="16dp"
             android:paddingBottom="20dp"
             app:dpv_endYear="2024"
             app:dpv_dayRightText="@string/spe_day"
             app:dpv_lineSpacing="10dp"
             app:dpv_monthRightText="@string/spe_month"
             app:dpv_normalTextColor="#7C7D8C"
             app:dpv_rightTextColor="#7C7D8C"
             app:dpv_rightTextMarginLeft="10dp"
             app:dpv_selectedDay="3"
             app:dpv_selectedMonth="3"
             app:dpv_selectedTextColor="#6DFFE9"
             app:dpv_selectedYear="1997"
             app:dpv_showCurtain="true"
             app:dpv_startYear="1970"
             app:dpv_textPadding="10dp"
             app:dpv_textSize="24sp"
             app:dpv_yearRightText="@string/spe_year"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_cancel" />-->

    </FrameLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_view" />

    <View
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_gravity="center_vertical"
        android:background="#3E3E58"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_sure" />

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="#6DFFE9"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/fl_view" />

</androidx.constraintlayout.widget.ConstraintLayout>