<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="45dp"
    android:layout_marginEnd="45dp"
    android:paddingTop="27dp"
    android:background="@drawable/bg_dialog_confirm"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingBottom="9dp"
        android:text="@string/authorize_bluetooth"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/authorize_bluetooth_tip"
        android:textColor="#7C7D8C"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="21dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg" />
    
    <View
        android:layout_width="1dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_sure"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sure"
        android:background="#3E3E58"/>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingTop="25dp"
        android:paddingBottom="21dp"
        android:text="@string/open"
        android:textColor="#6DFFE9"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg" />


</androidx.constraintlayout.widget.ConstraintLayout>